# data-migration-through-apis

./: README.md  Utilita_sensors_copy_labels_test_to_prod.csv  main.py  models.py  pyproject.toml  sequence_diagram.txt  test_main.py
fixtures/: data_production.json  data_test.json
