[tool.poetry]
name = "visual-labelling-data-migration"
version = "0.1.0"
description = ""
authors = ["Mathias <mathias@devgrid.co.uk>"]
readme = "README.md"
packages = [{include = "visual_labelling_data_migration"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.21"
python-dotenv = "^1.0.0"
pydantic = "^2.3.0"
pandas = "2.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
